<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddresFragment">

    <TextView
        android:id="@+id/direccion_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion_text"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <TextView
        android:id="@+id/direccion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_direccion_text"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/direccion_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/direccion_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_direccion"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:autofillHints="streetAddress"
        app:layout_constraintTop_toBottomOf="@id/direccion_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>


    <TextView
        android:id="@+id/altura_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura_text"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/direccion_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/altura_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_altura"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="streetHeight"
        app:layout_constraintTop_toBottomOf="@id/altura_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/codigo_postal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cp_text"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/altura_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/codigo_postal_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cp"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="zipCode"
        app:layout_constraintTop_toBottomOf="@id/codigo_postal_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/provincia_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provincia_text"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/codigo_postal_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/provincia_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_provincia"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="province_Addres"
        app:layout_constraintTop_toBottomOf="@id/provincia_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/addres_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/white"
        android:padding="18dp"
        android:text="Agregar dirrecion"
        android:textColor="#3B84F1"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/provincia_input"
      />
    <TextView
        android:id="@+id/tvaddres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/addres_btn"
        android:visibility="visible"
        android:textSize="25dp"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>