<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FavoritesFragment">

    <!-- Encabezado -->
    <TextView
        android:id="@+id/favorites_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_save_favorite_burger"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Campo para ingresar el nombre de la hamburguesa favorita -->
    <TextView
        android:id="@+id/favorite_burger_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_favorite_burger"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/favorites_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/favorite_burger_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_favorite_burger"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="favoriteBurgerName"
        app:layout_constraintTop_toBottomOf="@id/favorite_burger_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Campo para agregar notas sobre la hamburguesa favorita -->
    <TextView
        android:id="@+id/favorite_notes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_favorite_notes"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/favorite_burger_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/favorite_notes_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_favorite_notes"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="favoriteBurgerNotes"
        app:layout_constraintTop_toBottomOf="@id/favorite_notes_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Botón para guardar la hamburguesa favorita -->
    <Button
        android:id="@+id/save_favorite_burger_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_favorite_burger"
        app:layout_constraintTop_toBottomOf="@id/favorite_notes_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:id="@+id/tvfavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/save_favorite_burger_button"
        android:visibility="visible"
        android:textSize="25dp"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
