<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/card_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarjetas_text"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Campo para el número de tarjeta -->
    <TextView
        android:id="@+id/card_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number_label"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/card_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/card_number_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_card_number"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="creditCardNumber"
        app:layout_constraintTop_toBottomOf="@id/card_number_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLength="16"
        />

    <!-- Campo para la fecha de vencimiento -->
    <TextView
        android:id="@+id/expiry_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date_label"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/card_number_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/expiry_date_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_expiry_date"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="creditCardExpirationDate"
        app:layout_constraintTop_toBottomOf="@id/expiry_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:digits="0123456789/"
        android:maxLength="7"/>

    <!-- Campo para el nombre del titular de la tarjeta -->
    <TextView
        android:id="@+id/card_holder_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_holder_name_label"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/expiry_date_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/card_holder_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_card_holder_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/card_holder_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <Button
        android:id="@+id/card_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/white"
        android:padding="18dp"
        android:text="Agregar dirrecion"
        android:textColor="#3B84F1"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/card_holder_name_input"
        />
    <TextView
        android:id="@+id/tvcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/card_btn"
        android:visibility="visible"
        android:textSize="25dp"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
