<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ClaimsFragment">

    <!-- Encabezado -->
    <TextView
        android:id="@+id/claims_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_generate_claim"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Campo para el título del reclamo -->
    <TextView
        android:id="@+id/claim_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_claim_title"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/claims_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/claim_title_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_claim_title"
        android:inputType="text"
        android:autofillHints="title"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/claim_title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Campo para la descripción del reclamo -->
    <TextView
        android:id="@+id/claim_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_claim_description"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/claim_title_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/claim_description_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_claim_description"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:minLines="3"
        android:autofillHints="description"
        app:layout_constraintTop_toBottomOf="@id/claim_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Botón para enviar el reclamo -->
    <Button
        android:id="@+id/submit_claim_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_claim"
        app:layout_constraintTop_toBottomOf="@id/claim_description_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tvclaim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/submit_claim_button"
        android:visibility="visible"
        android:textSize="25dp"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
