<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".iu.add.CardAddFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Agregar Tarjeta"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>


    <TextView
        android:id="@+id/tvtel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Numero de tarjeta"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>


    <EditText
        android:id="@+id/card_number_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:autofillHints="phoneNumber"
        android:hint="@string/enter_card_number"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="125dp"
        app:layout_constraintTop_toBottomOf="@+id/tvtel" />

    <TextView
        android:id="@+id/tvcard_fecha_venc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date_label"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/card_number_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>


    <EditText
        android:id="@+id/card_fecha_venc_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_expiry_date"
        android:inputType="number"
        android:digits="0123456789/"
        android:maxLength="7"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="125dp"
        app:layout_constraintTop_toBottomOf="@+id/tvcard_fecha_venc" />

    <TextView
        android:id="@+id/tvcard_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_holder_name_label"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/card_fecha_venc_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/card_holder_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_card_holder_name"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="125dp"
        app:layout_constraintTop_toBottomOf="@+id/tvcard_name" />

    <Button
        android:id="@+id/btnAddCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/white"
        android:text="Agregar"
        android:textColor="#3B84F1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_holder_name_input" />

</androidx.constraintlayout.widget.ConstraintLayout>