<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PhoneFragment">

    <TextView
        android:id="@+id/phone_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_text"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Campo para el número de teléfono -->
    <TextView
        android:id="@+id/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_label"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/phone_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>
    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:autofillHints="phoneNumber"
        app:layout_constraintTop_toBottomOf="@id/phone_number_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <Button
        android:id="@+id/phone_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/white"
        android:padding="18dp"
        android:text="Agregar teléfono"
        android:textColor="#3B84F1"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input"
        />
    <TextView
        android:id="@+id/tvphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_btn"
        android:visibility="visible"
        android:textSize="25dp"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>